--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       
       firebase.auth().onAuthStateChanged(function(user) {
       if (user) {
-        window.location.href = "https://admirable-granita-579b44.netlify.app" 
+        window.location.href = "PROJECT.html" 
       }
     });
       })
