--- a/sit1.html
+++ b/sit1.html
@@ -33,7 +33,7 @@
       <a href="#"><p class="lp">General</a></p>
       <div class="vc">
       <div>
-        <a href="sit.html"span i class="uil uil-tachometer-fast"> Over view</i></a>
+        <a href="PROJECT.html"span i class="uil uil-tachometer-fast"> Over view</i></a>
        
       </div>
       <div>
