--- a/sit2.html
+++ b/sit2.html
@@ -91,7 +91,7 @@
                 <p id="result"></p>
               </div>
           <i class="fa-solid fa-angle-down"></i>
-             <div id="myModal" class="modal">
+             <div id="myModal" class="modal"></div>
         </div>
     </div>
     
